2.72 crashes when displaying beveled poly-curves with spline bevfac mapping #42018

Closed
opened 2014-09-29 23:44:16 +02:00 by Lukas Treyer · 6 comments
Member

Can't build blender at the moment, therefore I can't have a look at it on my own. The attached file opens with 2.71, but with 2.72 it makes Blender crash - sometimes on opening, sometimes only with Alt+A.test.blend
BTW. the cmake error I get: CMake Error at extern/libmv/CMakeLists.txt:56 (message): Unable to find shared_ptr. I did git pull on master and svn update in the libs.

Can't build blender at the moment, therefore I can't have a look at it on my own. The attached file opens with 2.71, but with 2.72 it makes Blender crash - sometimes on opening, sometimes only with Alt+A.[test.blend](https://archive.blender.org/developer/F113661/test.blend) BTW. the cmake error I get: CMake Error at extern/libmv/CMakeLists.txt:56 (message): Unable to find shared_ptr. I did git pull on master and svn update in the libs.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Lukas Treyer 2014-09-29 23:44:16 +02:00
Author
Member

Added subscriber: @cnd

Added subscriber: @cnd

This issue was referenced by 4268f1c8f2

This issue was referenced by 4268f1c8f27f7ce059f2819436f1770e54ce8c73

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4268f1c8f2.

Closed by commit 4268f1c8f2.

This issue was referenced by daab927d2e

This issue was referenced by daab927d2e450c0198e1688519599dbf4d1a8884
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42018
No description provided.