Fix T42018: Crash when displaying beveled poly-curves with spline bevfac mapping

This fix is for 2.72.